fix: android string positional format

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_fragment_settings">設定</string>
     <string name="title_activity_add_eta">加入到站提示</string>
 
-    <string name="dialog_remove_eta_title">是否要移除 $1%s $2%s 到站選項？</string>
+    <string name="dialog_remove_eta_title">是否要移除 %1$s %2$s 到站選項？</string>
     <string name="dialog_remove_eta_description">移除後將不能復原，你需要重新加入選項。</string>
     <string name="dialog_remove_eta_pos_btn">移除</string>
     <string name="dialog_remove_eta_neg_btn">取消</string>
