--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="text_eta_destination">往 %1$s</string>
     <string name="text_eta_destination_with_sp">往 %1$s (特別線 %2$s)</string>
 
+    <string name="dialog_add_eta_brand_selection_title">選擇公共運輸機構</string>
+    <string name="dialog_add_eta_brand_selection_kmb_btn">九巴</string>
+    <string name="dialog_add_eta_brand_selection_ctb_btn">新巴／城巴</string>
+
     <string name="dialog_edit_eta_title">編輯 %1$s 號線 %2$s 到站選項</string>
     <string name="dialog_edit_eta_description">選擇移除後將不能復原，你需要重新加入選項。</string>
     <string name="dialog_edit_eta_move_up_btn">上移</string>
