--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="dialog_add_eta_brand_selection_title">選擇公共運輸機構</string>
     <string name="dialog_add_eta_brand_selection_kmb_btn">九巴</string>
     <string name="dialog_add_eta_brand_selection_ctb_btn">新巴／城巴</string>
+    <string name="dialog_add_eta_brand_selection_gmb_btn">專線小巴</string>
+
+    <string name="text_gmb_region_hki">港島區</string>
+    <string name="text_gmb_region_kln">九龍區</string>
+    <string name="text_gmb_region_nt">新界區</string>
 
     <string name="dialog_edit_eta_title">編輯 %1$s 號線 %2$s 到站選項</string>
     <string name="dialog_edit_eta_description">選擇移除後將不能復原，你需要重新加入選項。</string>
