--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,12 @@
     <string name="title_activity_add_eta">路線編號</string>
 
     <string name="text_eta_destination">往 %1$s</string>
-    <string name="text_eta_destination_with_sp">往 %1$s (特別線 %2$s)</string>
+
+    <string name="text_settings_eta_destination">往 %1$s</string>
+    <string name="text_settings_eta_destination_with_sp">往 %1$s (特別線 %2$s)</string>
+
+    <string name="text_add_eta_destination">%1$s - %2$s 往 %3$s</string>
+    <string name="text_add_eta_destination_with_sp">%1$s (特別線 %2$s) - %3$s 往 %4$s</string>
 
     <string name="dialog_add_eta_brand_selection_title">選擇公共運輸機構</string>
     <string name="dialog_add_eta_brand_selection_kmb_btn">九巴</string>
