--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="demo_card_eta_minute_compact_2">13</string>
     <string name="demo_card_eta_minute_compact_3">23</string>
     <string name="demo_card_eta_minute_classic">3 分鐘</string>
-    <string name="demo_card_eta_minute_classic_time">07:30 07:50 08:10</string>
+    <string name="demo_card_eta_minute_classic_time">07:30\u00A0\u00A0\u00A0\u00A007:40\u00A0\u00A0\u00A0\u00A007:50</string>
 
     <string-array name="leftMenu">
         <item>@string/title_fragment_home</item>
