--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,9 +76,11 @@
 
     <string name="main_tab_title_1">預計到達時間</string>
     <string name="main_tab_title_2">設定</string>
+    <string name="main_tab_title_3">地圖</string>
     <string-array name="main_tab_title" translatable="false">
         <item>@string/main_tab_title_1</item>
         <item>@string/main_tab_title_2</item>
+        <item>@string/main_tab_title_3</item>
     </string-array>
 
     <string name="placeholder_search_route">搜尋路線</string>
