--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,9 @@
     <string name="demo_card_eta_minute_classic">3 分鐘</string>
     <string name="demo_card_eta_minute_classic_time">07:30\u00A0\u00A0\u00A0\u00A007:40\u00A0\u00A0\u00A0\u00A007:50</string>
 
+    <string name="stop_list_bottom_sheet_title">共有 %1$d 個車站</string>
+    <string name="route_list_bottom_sheet_title">觀塘市中心 (T4)</string>
+
     <string-array name="leftMenu">
         <item>@string/title_fragment_home</item>
         <item>@string/title_fragment_settings</item>
