--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="dialog_edit_eta_remove_btn">移除</string>
     <string name="dialog_edit_eta_cancel_btn">取消</string>
     <string name="toast_eta_already_added">無法重覆選擇已加入的站位。</string>
+    <string name="toast_eta_added">已加入站位。</string>
     <string name="eta_card_minute_unit">分</string>
 
     <string name="dialog_eta_layout_title">選擇到站時間卡片樣式</string>
