--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,9 @@
     <string name="text_add_eta_destination_sp_mobile">特別線 %1$s</string>
 
     <string name="dialog_add_eta_brand_selection_title">選擇公共運輸機構</string>
-    <string name="dialog_add_eta_brand_selection_kmb_btn">九巴</string>
-    <string name="dialog_add_eta_brand_selection_ctb_btn">新巴／城巴</string>
+    <string name="dialog_add_eta_brand_selection_kmb_btn">九巴／龍運</string>
+    <string name="dialog_add_eta_brand_selection_nwfb_btn">新巴</string>
+    <string name="dialog_add_eta_brand_selection_ctb_btn">城巴</string>
     <string name="dialog_add_eta_brand_selection_gmb_btn">專線小巴</string>
 
     <string name="text_add_eta_hint_route">你正瀏覧 %1$s 路線</string>
