--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,16 @@
     <string name="title_fragment_home">主頁</string>
     <string name="title_fragment_settings">設定</string>
 
+    <string name="test_onboarding_loading_start">正在載入路線數據</string>
+
+    <string name="test_onboarding_loading_kmb">已載入九巴／龍運路線數據</string>
+    <string name="test_onboarding_loading_ctb">已載入新巴／九巴路線數據</string>
+    <string name="test_onboarding_loading_gmb">已載入專線小巴路線數據</string>
+
+    <string name="test_onboarding_loading_failed_kmb">載入九巴／龍運路線數據失敗，請重新再試。</string>
+    <string name="test_onboarding_loading_failed_ctb">載入新巴／九巴路線數據失敗，請重新再試。</string>
+    <string name="test_onboarding_loading_failed_gmb">載入專線小巴路線數據失敗，請重新再試。</string>
+
     <string name="text_eta_destination_to">往</string>
 
     <string name="text_eta_destination">往 %1$s</string>
