--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,11 @@
     <string name="test_onboarding_loading_start">正在載入路線數據</string>
 
     <string name="test_onboarding_loading_kmb">已載入九巴／龍運路線數據</string>
-    <string name="test_onboarding_loading_ctb">已載入新巴／九巴路線數據</string>
+    <string name="test_onboarding_loading_ctb">已載入新巴／城巴路線數據</string>
     <string name="test_onboarding_loading_gmb">已載入專線小巴路線數據</string>
 
     <string name="test_onboarding_loading_failed_kmb">載入九巴／龍運路線數據失敗，請重新再試。</string>
-    <string name="test_onboarding_loading_failed_ctb">載入新巴／九巴路線數據失敗，請重新再試。</string>
+    <string name="test_onboarding_loading_failed_ctb">載入新巴／城巴路線數據失敗，請重新再試。</string>
     <string name="test_onboarding_loading_failed_gmb">載入專線小巴路線數據失敗，請重新再試。</string>
 
     <string name="text_eta_destination_to">往</string>
@@ -81,7 +81,7 @@
     <string name="demo_card_eta_minute_classic">3 分鐘</string>
     <string name="demo_card_eta_minute_classic_time">07:30\u00A0\u00A0\u00A0\u00A007:40\u00A0\u00A0\u00A0\u00A007:50</string>
 
-    <string name="stop_list_bottom_sheet_title">共有 %1$d 個車站</string>
+    <string name="stop_list_bottom_sheet_title">請選擇車站</string>
     <string name="route_list_bottom_sheet_title">觀塘市中心 (T4)</string>
 
     <string-array name="leftMenu">
@@ -105,5 +105,8 @@
     <string name="placeholder_search_route">搜尋路線</string>
     <string name="placeholder_search_stop">搜尋車站</string>
     <string name="empty_eta_list">沒有加入車站</string>
+    <string name="map_marker_distance_5">5分鐘路程</string>
+    <string name="map_marker_distance_10">10分鐘路程</string>
+    <string name="map_marker_distance_15">15分鐘路程</string>
 
 </resources>
