feat: update layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="test_onboarding_loading_failed_ctb">載入新巴／城巴路線數據失敗，請重新再試。</string>
     <string name="test_onboarding_loading_failed_gmb">載入專線小巴路線數據失敗，請重新再試。</string>
 
+    <string name="text_eta_card_classic_minute">%1$d 分鐘</string>
     <string name="text_eta_destination_to">往</string>
 
     <string name="text_eta_destination">往 %1$s</string>
