fix: update eta card layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,7 +86,8 @@
     <string name="demo_card_eta_minute_compact_1">3</string>
     <string name="demo_card_eta_minute_compact_2">13</string>
     <string name="demo_card_eta_minute_compact_3">23</string>
-    <string name="demo_card_eta_minute_classic">3 分鐘</string>
+    <string name="demo_card_eta_minute_classic">3</string>
+    <string name="demo_card_eta_minute_classic_unit">分鐘</string>
     <string name="demo_card_eta_minute_classic_time">07:30\u00A0\u00A0\u00A0\u00A007:40\u00A0\u00A0\u00A0\u00A007:50</string>
 
     <string name="stop_list_bottom_sheet_title">請選擇車站</string>
