--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="dialog_add_eta_brand_selection_gmb_hki_btn">港島專線小巴</string>
     <string name="dialog_add_eta_brand_selection_gmb_kln_btn">九龍專線小巴</string>
     <string name="dialog_add_eta_brand_selection_gmb_nt_btn">新界專線小巴</string>
+    <string name="dialog_add_eta_brand_selection_mtr_btn">港鐵</string>
 
     <string name="text_add_eta_hint_route">你正瀏覧 %1$s 路線</string>
     <string name="text_add_eta_hint_stop">你正瀏覧 %1$s 車站</string>
@@ -80,6 +81,8 @@
     <string name="dialog_eta_layout_compact_btn">緊湊</string>
     <string name="dialog_eta_layout_classic_btn">經典</string>
     <string name="dialog_eta_layout_cancel_btn">取消</string>
+
+    <string name="add_card_route_text">尚德</string>
 
     <string name="demo_card_route_number">296A</string>
     <string name="demo_card_stop_name">觀塘市中心 (T4)</string>
