--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,11 +16,13 @@
     <string name="test_onboarding_loading_ctb">已載入新巴／城巴路線數據</string>
     <string name="test_onboarding_loading_gmb">已載入專線小巴路線數據</string>
     <string name="test_onboarding_loading_mtr">已載入港鐵路線數據</string>
+    <string name="test_onboarding_loading_lrt">已載入輕鐵路線數據</string>
 
     <string name="test_onboarding_loading_failed_kmb">載入九巴／龍運路線數據失敗，請重新再試。</string>
     <string name="test_onboarding_loading_failed_ctb">載入新巴／城巴路線數據失敗，請重新再試。</string>
     <string name="test_onboarding_loading_failed_gmb">載入專線小巴路線數據失敗，請重新再試。</string>
     <string name="test_onboarding_loading_failed_mtr">載入港鐵路線數據失敗，請重新再試。</string>
+    <string name="test_onboarding_loading_failed_lrt">載入輕鐵路線數據失敗，請重新再試。</string>
 
     <string name="text_eta_card_classic_minute">%1$d 分鐘</string>
     <string name="text_eta_card_classic_mtr_station">%1$s站</string>
@@ -46,6 +48,7 @@
     <string name="dialog_add_eta_brand_selection_gmb_kln_btn">九龍專線小巴</string>
     <string name="dialog_add_eta_brand_selection_gmb_nt_btn">新界專線小巴</string>
     <string name="dialog_add_eta_brand_selection_mtr_btn">港鐵</string>
+    <string name="dialog_add_eta_brand_selection_lrt_btn">輕鐵</string>
 
     <string name="text_add_eta_hint_route">你正瀏覧 %1$s 路線</string>
     <string name="text_add_eta_hint_stop">你正瀏覧 %1$s 車站</string>
